# FruitNinja

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  FruitNinja.cpp  README.md  ToyEngine.cpp  ToyEngine.h  camera.hpp  fruit.cpp  fruit.hpp  launch.vs.json  mesh.cpp  model.cpp  object.cpp  object.hpp  shader.cpp  shader.hpp  vcpkg.json
Client/: CMakeLists.txt  FruitNinja.cpp  cursor.cpp  input.cpp  input.hpp
Client/game/: bomb.cpp  bomb.hpp  fruit.cpp  fruit.hpp  fruitslice.cpp  fruitslice.hpp  game.cpp  game.hpp  slicable.cpp  slicable.hpp  state_selection.cpp  state_selection.hpp  util.cpp  util.hpp  vfx.cpp  vfx.hpp
Client/game/classic_mode/: classic.cpp  classic.hpp
Client/game/modes/: classic.cpp  classic.hpp  classic_networking.cpp  classic_networking.hpp  mtp_classic.cpp  mtp_classic.hpp
Client/game/mtp_mode/: mtp_classic.cpp  mtp_classic.hpp  mtp_visual.hpp
Common/: CMakeLists.txt
Common/audio/: audio_clip.cpp  audio_clip.hpp  audio_context.cpp  audio_context.hpp  audiolistener.cpp  audiolistener.hpp  audiosource.cpp  audiosource.hpp  audiosource_pool.cpp  audiosource_pool.hpp
Common/debug/: log.hpp
Common/doc/: lite_conn_protocol_spec.md  udp_connection_protocol_spec.md
Common/infrastructure/: clock.cpp  clock.hpp  context.cpp  coroutine.cpp  coroutine.hpp  object.cpp  object.hpp  object_pool.hpp  state_machine.cpp  state_machine.hpp  transform.cpp  transform.hpp  ui.cpp  ui.hpp
Common/multiplayer/: game_packet.cpp  game_packet.hpp  object_data.hpp  player_input.hpp  setting.hpp
Common/networking/: a.hpp  connection.cpp  connection.hpp  lite_conn.cpp  lite_conn.hpp  networking.cpp  networking.hpp  socket.cpp  socket.hpp
Common/physics/: rigidbody.cpp  rigidbody.hpp
Common/rendering/: camera.cpp  camera.hpp  font.cpp  font.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  particle_system.cpp  particle_system.hpp  render_context.cpp  render_context.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp
Common/state/: cursor.cpp  time.cpp  time.hpp  window.cpp  window.hpp
Server/: CMakeLists.txt  connection_state.cpp  connection_state.hpp  default_state.cpp  default_state.hpp  fruit_ninja_server.cpp  multiplayer_fruit.cpp  multiplayer_fruit.hpp  multiplayer_game.cpp  multiplayer_game.hpp  server.cpp  server.hpp
Tests/: CMakeLists.txt  test_network.cpp  test_udp_connection.cpp  test_udp_socket.cpp
audio/: audio.cpp  audio.hpp  audio_clip.cpp  audio_clip.hpp  audio_context.cpp  audio_context.hpp  audiolistener.hpp  audiosource.cpp  audiosource.hpp  audiosource_pool.cpp  audiosource_pool.hpp
components/: audiolistener.cpp  audiolistener.hpp  audiosource.cpp  audiosource.hpp  camera.cpp  camera.hpp  fruit.cpp  fruit.hpp  fruitslice.cpp  fruitslice.hpp  rigidbody.cpp  rigidbody.hpp
core/: component.cpp  component.hpp  context.cpp  context.hpp  input.hpp  object.cpp  object.hpp  object_pool.hpp  transform.cpp  transform.hpp  ui.cpp  ui.hpp  ui3D.cpp  ui3D.hpp
game/: backUI.cpp  bomb.cpp  bomb.hpp  classic.cpp  classic.hpp  frontUI.cpp  frontUI.hpp  fruit.cpp  fruit.hpp  fruitslice.cpp  fruitslice.hpp  game.cpp  game.hpp  input.cpp  state_selection.cpp  state_selection.hpp  util.cpp  util.hpp  vfx.cpp  vfx.hpp
game/modes/: classic.cpp  classic.hpp  classic_networking.cpp  classic_networking.hpp
images/: blade0_arrow.aseprite  bomb.aseprite
infrastructure/: component.hpp  context.cpp  coroutine.cpp  transform.cpp  ui.cpp
models/: bomb.mtl
models/fruits/: apple.mtl  apple_top.mtl  coconut.mtl  coconut_top.mtl  pineapple.mtl  pineapple_bottom.mtl  watermelon.mtl  watermelon_bottom.mtl
networking/: Socket.hpp  networking.cpp
physics/: rigidbody.cpp  rigidbody.hpp
rendering/: camera.cpp  camera.hpp  font.cpp  font.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  particle_system.cpp  particle_system.hpp  renderer.cpp  renderer.hpp  shader.hpp
scripts/: backUI.cpp  backUI.hpp  context.cpp  context.hpp  frontUI.cpp  frontUI.hpp  game.cpp  game.hpp  initialization.cpp  initialization.hpp  input.cpp  input.hpp
settings/: fruitplane.hpp  fruitsize.hpp  fruitspawn.hpp  uiSetting.hpp
shaders/: lightsource.frag  lightsource.vert  mouse_trail.frag  mouse_trail.vert  object.frag  object.vert  object_unlit.frag  outline.frag  outline.vert  particle.frag  particle.vert  simple.frag  simple.vert  ui.frag  ui.vert  ui3D.vert
state/: camera.cpp  camera.hpp  cursor.cpp  cursor.hpp  new_objects.cpp  new_objects.hpp  score.cpp  score.hpp  screen.cpp  screen.hpp  state.cpp  state.hpp  time.cpp  time.hpp  window.cpp  window.hpp
window/: live_input_state.hpp  window.cpp  window.hpp
